--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
     "typescript": "^5.3.3",
+    "typescript-plugin-css-modules": "^5.0.2",
     "vite": "^5.0.12"
   }
 }
