--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@tanstack/react-query": "^5.18.1",
+    "flag-icons": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "usehooks-ts": "^2.14.0"
