--- a/.github/workflows/deploy-static-content-to-pages.yml
+++ b/.github/workflows/deploy-static-content-to-pages.yml
@@ -38,6 +38,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_CORS_PROXY_ENDPOINT: ${{ secrets.CORS_PROXY_ENDPOINT }}
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
