--- a/.github/workflows/deploy-static-content-to-pages.yml
+++ b/.github/workflows/deploy-static-content-to-pages.yml
@@ -40,6 +40,9 @@ jobs:
         run: npm run build
         env:
           VITE_CORS_PROXY_ENDPOINT: ${{ secrets.CORS_PROXY_ENDPOINT }}
+          VITE_NEW_RELIC_ACCOUNT_ID: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
+          VITE_NEW_RELIC_APP_ID: ${{ secrets.NEW_RELIC_APP_ID }}
+          VITE_NEW_RELIC_LICENSE_KEY: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
