--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-svg-loader": "^5.1.0"
   }
 }
