--- a/.github/workflows/deploy-static-content-to-pages.yml
+++ b/.github/workflows/deploy-static-content-to-pages.yml
@@ -66,3 +66,4 @@ jobs:
           user: "${{ github.actor }}"
           description: "Automated Release via Github Actions"
           commit: "${{ github.sha }}"
+          region: "EU"
