--- a/.github/workflows/deploy-static-content-to-pages.yml
+++ b/.github/workflows/deploy-static-content-to-pages.yml
@@ -58,7 +58,7 @@ jobs:
         run: echo "RELEASE_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
       # This step creates a new Change Tracking Marker
       - name: New Relic Application Deployment Marker
-        uses: newrelic/deployment-marker-action@v2.3.0
+        uses: newrelic/deployment-marker-action@v2.5.0
         with:
           apiKey: ${{ secrets.NEW_RELIC_API_KEY }}
           guid: ${{ secrets.NEW_RELIC_DEPLOYMENT_ENTITY_GUID }}
@@ -67,3 +67,4 @@ jobs:
           description: "Automated Release via Github Actions"
           commit: "${{ github.sha }}"
           region: "EU"
+          changelog: "${{ github.event.head_commit.message }}"
