--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,13 @@ updates:
       # Ignore eslint v9 as it's currently not compatible with 'eslint-plugin-query'
       - dependency-name: "eslint"
         versions: ["9.x"]
+      # Ignore react 19 and related updates.
+      - dependency-name: "react"
+        versions: ["19.x"]
+      - dependency-name: "@types/react"
+        versions: ["19.x"]
+      - dependency-name: "react-dom"
+        versions: ["19.x"]
+      - dependency-name: "@types/react-dom"
+        versions: ["19.x"]
     open-pull-requests-limit: 1 # Only allow 1 PR at a time (should be done automatically as updates are grouped)
