--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
     "@tanstack/react-query": "^5.70.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "framer-motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
